<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:text="@string/seat_dialog_cabin_class"
    android:textSize="18sp"
    android:textColor="@color/skyscannerColor"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/seat_dialog_radio_economy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/seat_dialog_economy"
            android:buttonTint="@color/skyscannerColor"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/seat_dialog_radio_premium_economy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/seat_dialog_premium_economy"
            android:buttonTint="@color/skyscannerColor"/>
        <RadioButton
            android:id="@+id/seat_dialog_radio_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/seat_dialog_business"
            android:buttonTint="@color/skyscannerColor"/>
        <RadioButton
            android:id="@+id/seat_dialog_radio_first_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/seat_dialog_first_class"
            android:buttonTint="@color/skyscannerColor"/>
    </RadioGroup>


</LinearLayout>