<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.LoginPasswordFragment">

    <TextView
        android:id="@+id/login_password_tv_content_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_password_content_1"
        android:textSize="28sp"
        android:textColor="@color/mainTextColor"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/login_password_tv_content_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/login_password_tv_content_1"
        android:text="@string/login_password_content_2"
        android:textColor="@color/loginSmallTextColor"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/login_password_tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_tv_content_2"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:text="@string/login_email_title"
        android:textColor="@color/loginDisableColor"
        android:textSize="12sp"/>
    <EditText
        android:id="@+id/login_password_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_tv_email_title"
        android:layout_marginHorizontal="20dp"
        android:text="aaa@aaa.com"
        android:textColor="@color/loginDisableColor"
        android:textSize="18sp"
        android:backgroundTint="@color/loginDisableLineColor"
        android:enabled="false"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_check"
        android:layout_alignRight="@id/login_password_et_email"
        android:layout_alignBottom="@id/login_password_et_email"
        android:layout_alignTop="@id/login_password_et_email"
        android:layout_marginRight="10dp"
        android:tint="@color/loginButtonColor"/>

    <TextView
        android:id="@+id/login_password_tv_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_et_email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/login_password_title"
        android:textColor="@color/skyscannerColor"
        android:textSize="12sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_tv_password_title"
        android:layout_marginHorizontal="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/loginDisableColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/et_email_cursor"
            android:backgroundTint="@color/skyscannerColor"
            android:inputType="textPassword"
            android:focusedByDefault="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/login_password_iv_error"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignRight="@id/login_password_et_password_layout"
        android:layout_alignTop="@id/login_password_et_password_layout"
        android:layout_alignBottom="@id/login_password_et_password_layout"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_exclamation_sign"
        android:tint="@color/loginErrorColor"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/login_password_tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/login_password_et_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/login_password_forget"
        android:textStyle="bold"
        android:textColor="@color/skyscannerColor"
        android:stateListAnimator="@null"/>
    <LinearLayout
        android:id="@+id/login_password_linear_error"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_tv_forget_password"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/loginErrorBackground"
        android:padding="15dp"
        android:visibility="invisible">
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_exclamation_sign"
            android:tint="@color/loginErrorColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:text="@string/login_password_error"
            android:textColor="@color/loginErrorColor"/>
    </LinearLayout>
</RelativeLayout>