<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/preferences_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/preferences_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:elevation="0dp"/>
        <View
            android:id="@+id/preferences_toolbar_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:background="@color/profileToolbarDivider"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/preferences_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/preferences_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/preferences_title"
                android:textSize="34sp"
                android:textColor="@color/mainTextColor"/>
            <LinearLayout
                android:id="@+id/preferences_linear_account_managements"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/preferences_account_management"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/mainTextColor"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/preferencesSeparatorColor"/>
                <TextView
                    android:id="@+id/preferences_tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/preferences_logout"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/preferencesLogout"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/preferencesSeparatorColor"/>
                <TextView
                    android:id="@+id/preferences_tv_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/preferences_delete_account"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/preferencesDeleteAccount"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/preferencesSeparatorColor"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>